--- a/app/views/query_report/_charts.html.erb
+++ b/app/views/query_report/_charts.html.erb
@@ -1,6 +1,6 @@
 <% if report.has_chart? and report.enable_chart? and report.chart_on_web? %>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <%= render :partial => "query_report/chart", locals: {report: report} %>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <%= render :partial => "query_report/chart", locals: {report: report} %>
 <% else %>
-    <br/>
+        <br/>
 <% end %>
