--- a/app/views/query_report/_record_footer.html.erb
+++ b/app/views/query_report/_record_footer.html.erb
@@ -1,8 +1,11 @@
 <% if report.has_total? %>
     <tfoot>
     <tr>
+     
       <% report.column_total_with_colspan.each do |total_with_colspan| %>
+       <% p total_with_colspan %>
           <td colspan="<%= total_with_colspan[:colspan] %>" class="queryreport-td-align-right"><%= total_with_colspan[:content] %></td>
+
       <% end %>
     </tr>
     </tfoot>
