--- a/app/views/query_report/_records.html.erb
+++ b/app/views/query_report/_records.html.erb
@@ -2,7 +2,13 @@
     <table class="<%= QueryReport.config.record_table_class %>" cellpadding="0" cellspacing="0">
       <thead>
       <% report.columns.each do |column| %>
-          <th><%= column.sortable? ? sort_link(report.search, column.sort_link_attribute, column.humanize, params, remote: @remote) : column.humanize %></th>
+        <% if column.visible?  %>
+          <th >
+              <%= 
+                  column.sortable? ? sort_link(report.search, column.sort_link_attribute, column.humanize, params, remote: @remote) : column.humanize 
+              %>
+         </th>
+         <% end %>
       <% end %>
       </thead>
 
@@ -10,14 +16,16 @@
       <% report.records_to_render.each do |record| %>
           <tr>
             <% report.columns.each do |column| %>
-                <% value = record[column.humanize]
-                   align = column.align
-                   align_attr = align ? "class=queryreport-td-align-#{align.to_s}" : ''
-                %>
-                <% if value.kind_of?(Hash) %>
-                    <td rowspan="<%= value[:rowspan] %>" <%= align_attr %> ><%= value[:content] %></td>
-                <% elsif record.has_key?(column.humanize) %>
-                    <td <%= align_attr %>><%= value %></td>
+             <% if column.visible? %>
+                    <% value = record[column.humanize]
+                       align = column.align
+                       align_attr = align ? "class=queryreport-td-align-#{align.to_s}" : ''
+                    %>
+                    <% if value.kind_of?(Hash) %>
+                        <td rowspan="<%= value[:rowspan] %>" <%= align_attr %> ><%= value[:content] %></td>
+                    <% elsif record.has_key?(column.humanize) %>
+                        <td <%= align_attr %>><%= value %></td>
+                    <% end %>
                 <% end %>
             <% end %>
           </tr>
