--- a/app/views/query_report/_search.html.erb
+++ b/app/views/query_report/_search.html.erb
@@ -1,9 +1,11 @@
 <% params_for_url = params.clone
    params_for_url.delete(:q)
-   params_for_url.delete(:custom_search) %>
-
+   params_for_url.delete(:custom_search)
+%>
 <%= query_report_search_form(report) do |f| %>
-    <%= hash_to_hidden_fields params_for_url %>
+    <%#= 
+       # hash_to_hidden_fields params_for_url
+    %>
     <% report.filters.each do |filter| %>
         <% filter.comparators.each do |comparator| %>
             <%= query_report_render_filter(filter, comparator) %>
