--- a/app/views/query_report/_content.html.erb
+++ b/app/views/query_report/_content.html.erb
@@ -5,5 +5,10 @@
   <%= render :partial => "query_report/records", locals: {report: report} %>
 </div>
 <div class="query_report_pagination">
-  <%= paginate report.filtered_paginated_query, remote: @remote if report.paginate? %>
+<% 
+	#Cambio en caliente del parametro send_as_email
+	@s = paginate report.filtered_paginated_query, remote: @remote if report.paginate?
+	@s = @s.gsub /send_as_email=1/, "send_as_email=0"
+%>
+  <%=  @s.html_safe %>
 </div>
