--- a/app/views/query_report/_search.html.erb
+++ b/app/views/query_report/_search.html.erb
@@ -16,5 +16,11 @@
     <%= hidden_field_tag :subject %>
     <%= hidden_field_tag :message %>
     <%= hidden_field_tag :target_dom_id, @target_dom_id %>
-    <%= submit_tag t('query_report.labels.search'), :class => QueryReport.config.search_button_class, :onclick => "$('#{@target_dom_id} #send_as_email').val(0);" %>
+    <%= hidden_field_tag :access_token, @access_token %>
+
+
+    <%= submit_tag t('query_report.labels.search'), 
+        :class => QueryReport.config.search_button_class, 
+        :onclick => "$('#{@target_dom_id} #send_as_email').val(0);" 
+    %>
 <% end %>
