--- a/app/views/query_report/_list.html.erb
+++ b/app/views/query_report/_list.html.erb
@@ -2,9 +2,12 @@
    @target_dom_id = params[:target_dom_id] || "report_#{uuid}" %>
 <div class="query_report" id="<%= @target_dom_id %>">
   <div class="query_report_header">
-    <div class="query_report_search_form" style="<%= report.has_filter? ? '' : 'display: none;' %>">
-      <%= render :partial => "query_report/search", locals: {report: report} %>
-    </div>
+  <% p 'Tiene Filtro?' + report.has_filter?.to_s %>
+    <% if report.has_filter? %>
+      <div class="query_report_search_form" style="<%= report.has_filter? ? '' : 'display: none;' %>">
+        <%= render :partial => "query_report/search", locals: {report: report} %>
+      </div>
+    <% end %>
     <div class="query_report_links">
       <%= render :partial => "query_report/links", locals: {report: report} %>
     </div>
